[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyturnstile"
version = "0.5.0"
description = "A Python library for validating Cloudflare Turnstile tokens with async and sync support"
readme = "README_PYPI.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["Cloudflare", "turnstile", "captcha", "validation"]
authors = [
    { name = "Dong-Chen-1031", email = "dcdcdc1031@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/Dong-Chen-1031/pyturnstile"
Repository = "https://github.com/Dong-Chen-1031/pyturnstile"
Issues = "https://github.com/Dong-Chen-1031/pyturnstile/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.1",
]

[tool.coverage.run]
source = ["src/pyturnstile"]
omit = ["tests/*", "**/__pycache__/*", "**/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an async test",
]
